<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/cardview_shadow_start_color"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/green"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:paddingTop="50dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:paddingTop="90dp"
                android:text="@string/youhua"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_collapseMode="pin">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:paddingTop="7dp"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/dunpaii" />

                    <ImageView
                        android:id="@+id/saoyisaoid"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:paddingTop="7dp"
                        app:srcCompat="@drawable/saoyisao" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/shadow"
        android:gravity="center_horizontal">

        <TableRow android:layout_height="70dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tx_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lianjie"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wifi_name_shishi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="G-power" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/homed" />
        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#E0EEEE">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="52dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:background="@drawable/huojian" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/jiasu"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageButton
                android:layout_width="20dp"
                android:background="@drawable/jiasu3"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="35dp"
                android:gravity="center_vertical"
                />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/anquantijian" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tijian"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/cesu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"

                    android:text="@string/cesu"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/qiandao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/qiandao"
                    android:textColor="@color/black" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <ProgressBar
        android:id="@+id/pb_wifi_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_gravity="center"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rs_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>